# nextjs-tauri

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: tauri-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: layout.tsx  page.tsx
src/app/teste/: page.tsx
src/shared/helpers/constants/: index.ts
src/shared/providers/: index.tsx  nextUI.provider.tsx
