[package]
name = "src-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "src_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows-specific dependencies (GNU linker support)
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2" # For compatibility with Linux
openssl-sys = "0.9" # Required for SSL/TLS on Linux

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9" # Required for macOS CoreFoundation APIs
security-framework = "2.7" # For macOS security APIs
